# crewai-docker

./: Dockerfile  README.md  entrypoint.sh  shell_venv.sh
some1/: README.md  pyproject.toml
some1/src/some1/: crew.py  main.py
