[tool.poetry]
name = "some1"
version = "0.1.0"
description = "some1 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
some1 = "some1.main:run"
train = "some1.main:train"
replay = "some1.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
